--- a/P000206.opf/meta.yml
+++ b/P000206.opf/meta.yml
@@ -1,12 +1,14 @@
-ebook_metadata:
+id: P000206
+initial_creation_type: ebook
+source_metadata:
   title: ༄༅༔ གསང་སྔགས་ལམ་གྱི་རིམ་པ་རིན་པོ་ཆེ་གསལ་བའི་སྒྲོན་མེ་ཞེས་བྱ་བ་བཞུགས་སོ༔
   authors:
   - མཛད་པ་པོ། ཨོ་རྒྱན་གྱི་སློབ་དཔོན་ཆེན་པོ་པདྨ་སཾ་བྷ་ཝ༔
-  sku: SHE-RTD-018
   layers:
   - book_title
   - author
   - chapter_title
+  id: SHE-RTD-018
 web_metadata:
   title:
     en: The Precious Garland:A Commentary on the “Precious Illuminating Lamp for the
