layers filename capitalized

--- a/P000206.opf/layers/v001/BookTitle.yml
+++ b/P000206.opf/layers/v001/BookTitle.yml
@@ -1,5 +1,5 @@
 id: d49cd4ed33284c4b9bbbcc4db7e00e09
-annotation_type: book_title
+annotation_type: BookTitle
 revision: '00001'
 annotations:
 - span:
