--- a/P000206.opf/layers/v001/Chapter.yml
+++ b/P000206.opf/layers/v001/Chapter.yml
@@ -1,5 +1,5 @@
 id: f0c7eff77a4b41acace0b99ec2ba9516
-annotation_type: chapter_title
+annotation_type: Chapter
 revision: '00001'
 annotations:
 - id: 2edd357e5bc444a397bca88e4512c309
