--- a/P000206.opf/meta.yml
+++ b/P000206.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P000206
 initial_creation_type: ebook
+created_at: 31/01/2020
+last_modified_at: 25/11/2021
 source_metadata:
   title: ༄༅༔ གསང་སྔགས་ལམ་གྱི་རིམ་པ་རིན་པོ་ཆེ་གསལ་བའི་སྒྲོན་མེ་ཞེས་བྱ་བ་བཞུགས་སོ༔
   authors:
